snask_compiler/check_error.txt
cargo :     Checking 
snask v0.2.1 (C:\Users
\Davi\Desktop\codes\Sn
ask\snask_compiler)
No linha:1 caractere:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 check_error.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng sn...snask_com    
piler):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
warning: unused 
imports: `DictDecl`, 
`DictSet`, 
`ListDecl`, and 
`ListPush`
 --> src\semantic_anal
yzer.rs:1:128
  |
1 | ...aryOp, 
LiteralValue, 
ConditionalStmt, 
LoopStmt, ListDecl, 
DictDecl, ListPush, 
DictSet};
  |                   
                      
           ^^^^^^^^  
^^^^^^^^  ^^^^^^^^  
^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: `PathBuf`
 --> 
src\modules.rs:4:23
  |
4 | use 
std::path::{Path, 
PathBuf};
  |                   
    ^^^^^^^

warning: unused 
import: 
`crate::value::Value`
 --> src\stdlib.rs:1:5
  |
1 | use 
crate::value::Value;
  |     
^^^^^^^^^^^^^^^^^^^

warning: unused 
import: `Position`
 --> src\diagnostics.r
s:1:25
  |
1 | use 
crate::span::{Span, 
Position};
  |                   
      ^^^^^^^^

error[E0599]: no 
variant or associated 
item named `Object` 
found for enum 
`value::Value` in the 
current scope
   --> src\stdlib\math
.rs:307:12
    |
307 |     
Value::Object(module)
    |            
^^^^^^ variant or 
associated item not 
found in 
`value::Value`
    |
   ::: 
src\value.rs:7:1
    |
  7 | pub enum Value {
    | -------------- 
variant or associated 
item `Object` not 
found for this enum

warning: unused 
variable: `i`
   --> 
src\packages.rs:194:10
    |
194 |     for (i, 
line) in lines.iter().
enumerate() {
    |          ^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_i`
    |
    = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

For more information 
about this error, try 
`rustc --explain 
E0599`.
warning: `snask` (bin 
"snask") generated 5 
warnings
error: could not 
compile `snask` (bin 
"snask") due to 1 
previous error; 5 
warnings emitted
